2005-03-17  Per Bothner  <per@bothner.com>

	* ltmain.sh: New version of cvs libtool (2.1a).
	* Make-rules (scm-classes.stamp): Use --module-static-run
	instead of --module-static.
	* aclocal.m4, configure, */Makefile.in: Re-geneate.

	* kawa/repl.java (processArgs): Don't setDefaultLanguage until
	default Environment has been set.

2005-03-16  Per Bothner  <per@bothner.com>

	* kawa/repl.java (previousLanguage): New static field.
	(getLanguageFromFilenameExtension, getLanguage, processArgs): Use
	previousLanguage to avoiding calling Language.getDefaultLanguage
	before that is working.
	* kawa/standard/Scheme.java (createReadTable): New method.
	* kawa/standard/Scheme.java <init>): Don't setDefaultLanguage here.

2005-03-16  Per Bothner  <per@bothner.com>

	* kawa/repl.java (processArgs): Handle new --module-static-run flag.
	* kawa/standard/require.java (importDefinitions): Skip fields whose
	name ends in "$instance" - except to optimize 'dofind'.

2005-03-11  Per Bothner  <per@bothner.com>

	* kawa/standard/require.java (importDefinitions): Don't set alias's
	type to typeFieldLocation, since getType should be post-indirection.
	(makeDeclInModule): Likewise, if field is a Location, decl type
	is Object. not a Location.

2005-03-07  Per Bothner  <per@bothner.com>

	* kawa/standard/Scheme.java: Update package of DefineNamespace.

	* kawa/standard/read_line.java (apply2): Update WrongType call.

2005-03-06  Per Bothner  <per@bothner.com>

	* ltmain.sh: New from CVS (patched) libtool 2.1a.
	* acinclude.m4, libtool.m4: Removed.
	* Makefile.am (EXTRA_DIST): Remove libtool.m4.
	* Makefile.in, configure, aclocal.m4: Re-generated.
	* configure.in: Updat AC_PROG_LIBTOOL to LT_INIT.
	* missing: New version from automake-1.9.
	* */Makefile.in: Re-generated.

2005-03-04  Per Bothner  <per@bothner.com>

	* kawa/repl.java: Update Interpreter->Language various places.
	* kawa/Shell.java: Likewise.
	* kawa/GuiConsole.java: Likewise.
	* kawa/TelnetRepl.java: Likewise.