@@ -22,17 +22,17 @@ public class try_catch
     int n = vec.size();
     for (int i = 0;  i < n;  i++)
       {
-	Expression cl = tr.rewrite(vec.get(i));
-	if (cl instanceof ErrorExp)
-	  return cl;
-	if (! (cl instanceof LetExp))
-	  return tr.syntaxError("internal error with try-catch");
-	CatchClause ccl = new CatchClause((LetExp) cl);
-	if (prev == null)
-	  chain = ccl;
-	else
-	  prev.setNext(ccl);
-	prev = ccl;
+        Expression cl = Scheme.lambda.rewrite(vec.get(i), tr);
+        if (cl instanceof ErrorExp)
+          return cl;
+        if (! (cl instanceof LambdaExp))
+          return tr.syntaxError("internal error with try-catch");
+        CatchClause ccl = new CatchClause((LambdaExp) cl);
+        if (prev == null)
+          chain = ccl;
+        else
+          prev.setNext(ccl);
+        prev = ccl;
       }
     if (try_part_exp instanceof ErrorExp)
       return try_part_exp; 
