@@ -1,3 +1,11 @@
+2005-03-18  Per Bothner  <per@bothner.com>
+
+	* CatchClause.java (<init>): Change to take a LambdaExp rather than
+	a LetExp - with a bogus init value.  Fixes Savannah bug #11540.
+
+	* CatchClause.java (print): Add writeSpaceFill call.
+	* TryExp.java (print): Likewise.
+
 2005-03-17  Per Bothner  <per@bothner.com>
 
 	* ProcInitializer.java (<init>): Undo yesterday's change - we really
